--- a/BT2_Socket/app/src/main/res/layout/activity_control.xml
+++ b/BT2_Socket/app/src/main/res/layout/activity_control.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BlueControl">
+    tools:context=".ControlActivity">
 
     <!-- Các nút điều khiển thiết bị -->
     <ImageButton
