--- a/BT1_UploadFile/app/src/main/res/layout/activity_main.xml
+++ b/BT1_UploadFile/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/white">
 
     <LinearLayout
@@ -32,14 +33,12 @@
         </LinearLayout>
 
         <!-- Ảnh đại diện -->
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgProfile"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="16dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_profile"
-            android:background="@drawable/circle_background"/>
+            android:src="@drawable/ic_profile" />
 
         <!-- Tiêu đề -->
         <TextView
@@ -154,7 +153,7 @@
                     android:id="@+id/tvGender"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Male"
+                    android:text="Nam"
                     android:textSize="16sp"/>
             </LinearLayout>
         </LinearLayout>
