--- a/BT2_Socket/app/src/main/res/layout/activity_control.xml
+++ b/BT2_Socket/app/src/main/res/layout/activity_control.xml
@@ -6,79 +6,86 @@
     android:layout_height="match_parent"
     tools:context=".ControlActivity">
 
-    <!-- Các nút điều khiển thiết bị -->
-    <ImageButton
-        android:id="@+id/btnTb1"
-        android:layout_width="116dp"
-        android:layout_height="112dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="92dp"
-        android:background="@drawable/tb1on"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <ImageButton
-        android:id="@+id/btnTb2"
-        android:layout_width="116dp"
-        android:layout_height="112dp"
-        android:layout_marginTop="92dp"
-        android:layout_marginEnd="60dp"
-        android:background="@drawable/tb7on"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.813"
-        app:layout_constraintStart_toEndOf="@+id/btnTb1"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <!-- Thông báo -->
-    <TextView
-        android:id="@+id/textV1"
-        android:layout_width="400dp"
-        android:layout_height="23dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="32dp"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="Thông báo"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnTb1" />
-
-    <!-- Thông tin thiết bị -->
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
         android:text="Thiết bị đang kết nối"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"/>
 
     <TextView
         android:id="@+id/textViewMAC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="Địa chỉ MAC"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/textView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"/>
 
-    <!-- Nút ngắt kết nối -->
+    <ImageButton
+        android:id="@+id/btnTb1"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:background="@drawable/tb1on"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMAC"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"/>
+
+    <ImageButton
+        android:id="@+id/btnTb1Off"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:background="@drawable/tb1off"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMAC"
+        app:layout_constraintStart_toEndOf="@id/btnTb1"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"/>
+
+    <ImageButton
+        android:id="@+id/btnTb2"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:background="@drawable/tb7on"
+        app:layout_constraintTop_toBottomOf="@+id/btnTb1"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"/>
+
+    <ImageButton
+        android:id="@+id/btnTb2Off"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:background="@drawable/tb7off"
+        app:layout_constraintTop_toBottomOf="@+id/btnTb1Off"
+        app:layout_constraintStart_toEndOf="@id/btnTb2"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"/>
+
+    <TextView
+        android:id="@+id/textV1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Thông báo"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@+id/btnTb2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"/>
+
     <ImageButton
         android:id="@+id/btnDisc"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="76dp"
         android:background="@drawable/btnotconnect"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintTop_toBottomOf="@+id/textV1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textV1" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
