--- a/BT2_Socket/app/src/main/res/layout/activity_main.xml
+++ b/BT2_Socket/app/src/main/res/layout/activity_main.xml
@@ -6,40 +6,39 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <!-- Tiêu đề -->
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="404dp"
-        android:layout_height="51dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Danh sách thiết bị"
         android:textAlignment="center"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.285"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.039" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"/>
 
-    <!-- Danh sách thiết bị Bluetooth -->
     <ListView
         android:id="@+id/listTb"
-        android:layout_width="343dp"
-        android:layout_height="450dp"
-        android:layout_margin="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnTimthietbi" />
 
-    <!-- Nút Tìm Thiết Bị -->
     <Button
         android:id="@+id/btnTimthietbi"
-        android:layout_width="409dp"
-        android:layout_height="67dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="4dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Tìm Thiết Bị"
+        app:layout_constraintTop_toBottomOf="@id/listTb"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listTb" />
+        android:layout_marginBottom="24dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
